--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     --acento: #FF5722;
     --acentoBajo: #E64A19;
     --gris: #546E7A;
+    --bs-font-sans-serif: Atkinson Hyperlegible, Helvetica, sans-serif
 }
 
 em{
