--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 :root {
     --acentoAlto: #FFCCBC;
     --acento: #FF5722;
     --acentoBajo: #E64A19;
     --gris: #546E7A;
-    --bs-font-sans-serif: Atkinson Hyperlegible, Helvetica, sans-serif
+    --bs-font-sans-serif: "Atkinson Hyperlegible", sans-serif
 }
 
 em{
