--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     --acento: #FF5722;
     --acentoBajo: #E64A19;
     --gris: #546E7A;
-    --bs-font-sans-serif: "Atkinson Hyperlegible", sans-serif
+    --bs-font-sans-serif: "Atkinson Hyperlegible", sans-serif;
 }
 
 em{
