--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --acentoBajo: #E64A19;
     --gris: #546E7A;
     --bs-font-sans-serif: "Atkinson Hyperlegible", sans-serif;
+    --bs-link-color-rgb: 120, 94, 240
 }
 
 em{
