--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@
     --bs-link-color-rgb: 71, 51, 163;
 }
 
+.text-bg-primary{
+    background-color: rgba (220, 026, 011) !important;
+}
+.text-bg-secondary{
+    background-color: rgba(336, 006, 066) !important; 
+
 em{
     font-style: normal;
     font-weight: 500;
